--- a/toco_stack/templates/base.html
+++ b/toco_stack/templates/base.html
@@ -1,6 +1,6 @@
 <html lang="en">
   <head>
-    <title>Example Toco Stack{%if title%} - {{title}}{%endif%}</title>
+    <title>Example Toco Stack</title>
   </head>
   <body>
     {% block content %}
