--- a/toco_stack/templates/index.html
+++ b/toco_stack/templates/index.html
@@ -38,9 +38,8 @@
 <form method="post" action="{% url 'logout' %}" id="logout">
   {% csrf_token %}
   {% if redirect_field_value %}
-  <input type="hidden" name="{{redirect_field_name}}" value="{{redirect_field_value}}" form="logout"/>
   {% endif %}
-  <input type="hidden" name="from" value="/" form="logout"/>
+  <input type="hidden" name="redirect_to" value="/" form="logout"/>
   <button type="submit">Logout</button>
 </form>
 
@@ -49,13 +48,29 @@
   {% if redirect_field_value %}
   <input type="hidden" name="{{redirect_field_name}}" value="{{redirect_field_value}}" form="logout_everywhere"/>
   {% endif %}
-  <input type="hidden" name="from" value="/" form="logout_everywhere"/>
+  <input type="hidden" name="redirect_to" value="/" form="logout_everywhere"/>
   <button type="submit">End ALL sessions (including on other computers)</button>
+</form>
+
+<form action="{% url 'reset_password' %}" method="post" id="reset_password_logged_in">
+  {% csrf_token %}
+  <label>current password:</label><input type="password" name="current_password" form="reset_password_logged_in" required>
+  <label>new password:</label><input type="password" name="password" form="reset_password_logged_in" required>
+  <label>new password (again):</label><input type="password" name="confirm_password" form="reset_password_logged_in" required>
+  <input type="hidden" name="redirect_to" value="/"/>
+  <button type="submit" >Reset password</button>
 </form>
 
 {% elif password_reset_request_id %}
 
-FOO!
+<form action="{% url 'reset_password' %}" method="post" id="reset_password">
+  {% csrf_token %}
+  <label>new password:</label><input type="password" name="password" form="reset_password" required>
+  <label>new password (again):</label><input type="password" name="confirm_password" form="reset_password" required>
+  <input type="hidden" name="redirect_to" value="/"/>
+  <input type="hidden" name="reset_request_id" value="{{password_reset_request_id}}"/>
+  <button type="submit" >Reset password</button>
+</form>
 
 {% else %}
 
@@ -64,7 +79,7 @@ FOO!
   <label>email:</label><input type="text" name="email" form="register" required autofocus>
   <label>password:</label><input type="password" name="password" form="register" required>
   <label>password (again):</label><input type="password" name="confirm_password" form="register" required>
-  <input type="hidden" name="from" value="/"/>
+  <input type="hidden" name="redirect_to" value="/"/>
   <button type="submit" >Register</button>
 </form>
 
@@ -72,14 +87,14 @@ FOO!
   {% csrf_token %}
   <label>email:</label><input type="text" name="email" form="login" required autofocus>
   <label>password:</label><input type="password" name="password" form="login" required>
-  <input type="hidden" name="from" value="/"/>
+  <input type="hidden" name="redirect_to" value="/"/>
   <button type="submit">Login</button>
 </form>
 
 <form method="post" action="{% url 'request_password_reset' %}" id="request_password_reset">
   {% csrf_token %}
   <label>email:</label><input type="text" name="email" form="request_password_reset" required autofocus>
-  <input type="hidden" name="from" value="/"/>
+  <input type="hidden" name="redirect_to" value="/"/>
   <button type="submit">Request password reset</button>
 </form>
 
